--- a/frontend/src/app/core/modules/file-manager/components/file-manager/file-manager.component.html
+++ b/frontend/src/app/core/modules/file-manager/components/file-manager/file-manager.component.html
@@ -30,7 +30,7 @@
           <app-directory-mini-navigation [currentPath]="currentPath" (pathEmitter)="changeCurrentPath($event)"></app-directory-mini-navigation>
         </div>
 
-        <div class="input-group input-group-sm col-4 text-right">
+        <div class="input-group input-group-sm col-4 text-end">
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-sm"><mat-icon matPrefix>search</mat-icon></span>
           </div>
