--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -26,7 +26,7 @@
 <!--    </form>-->
 
     <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ms-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item dropdown">
         <div class="nav-link">
