--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12 text-right">
+  <div class="col-md-12 text-end">
     <button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
     </button>
     <button class="save-builder ml-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
