--- a/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
+++ b/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
 </div>
-<div class="text-right">
+<div class="text-end">
   <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2"><i class="material-icons">photo</i>Přidat obrázek
   </button>
 </div>
