--- a/frontend/src/app/page/pages/page-list/page-list.component.html
+++ b/frontend/src/app/page/pages/page-list/page-list.component.html
@@ -12,8 +12,8 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
+        <th mat-header-cell *matHeaderCellDef class="text-end">Akce</th>
+        <td mat-cell *matCellDef="let element" class="text-end">
           <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
           <a [routerLink]="['../page-builder', element.id]"><i class="material-icons">list</i>Editace stránky</a> |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
