--- a/frontend/src/app/plugin/pages/list-available/list-available.component.html
+++ b/frontend/src/app/plugin/pages/list-available/list-available.component.html
@@ -15,8 +15,8 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
+        <th mat-header-cell *matHeaderCellDef class="text-end">Akce</th>
+        <td mat-cell *matCellDef="let element" class="text-end">
           <a [routerLink]="['../list-created', element.identifier]"><mat-icon>settings</mat-icon>Vstoupit</a>
         </td>
       </ng-container>
