--- a/frontend/src/app/plugin/pages/list-created/list-created.component.html
+++ b/frontend/src/app/plugin/pages/list-created/list-created.component.html
@@ -11,8 +11,8 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
-        <td mat-cell *matCellDef="let element" class="text-right">
+        <th mat-header-cell *matHeaderCellDef class="text-end">Akce</th>
+        <td mat-cell *matCellDef="let element" class="text-end">
           <a [routerLink]="['../../setting', element.id]"><i class="material-icons">settings</i>nastavení</a> |
           <a [routerLink]="['../../update', element.id]"><i class="material-icons">list</i>Editace pluginu</a> |
           <a (click)="openRemoveWebDialog(element)" class="text-danger"><i
