--- a/frontend/src/app/authorization/pages/authorization/authorization.component.html
+++ b/frontend/src/app/authorization/pages/authorization/authorization.component.html
@@ -1,6 +1,6 @@
-<body class="register-page" style="min-height: 586.391px;">
-<div class="register-box">
-  <div class="register-logo">
+<div class="login-page" style="min-height: 586.391px;">
+<div class="login-box">
+  <div class="login-logo">
     <a href="../../index2.html"><b>Admin</b>LTE</a>
   </div>
 
@@ -11,14 +11,16 @@
       <router-outlet></router-outlet>
       <div class="social-auth-links text-center">
         <p>- OR -</p>
-        <a href="#" class="btn btn-block btn-primary">
-          <i class="fab fa-facebook mr-2"></i>
-          Sign up using Facebook
-        </a>
-        <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i>
-          Sign up using Google+
-        </a>
+        <div class="d-grid gap-2">
+          <a href="#" class="btn btn-block btn-primary">
+            <i class="fab fa-facebook mr-2"></i>
+            Sign up using Facebook
+          </a>
+          <a href="#" class="btn btn-block btn-danger">
+            <i class="fab fa-google-plus mr-2"></i>
+            Sign up using Google+
+          </a>
+        </div>
       </div>
 
       <a href="login.html" class="text-center">I already have a membership</a>
@@ -36,4 +38,4 @@
 <script src="../../dist/js/adminlte.min.js"></script>
 
 
-</body>
+</div>
