--- a/frontend/src/app/authorization/components/login/login.component.html
+++ b/frontend/src/app/authorization/components/login/login.component.html
@@ -1,33 +1,29 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <div  class="input-group">
+    <div  class="input-group mb-3">
       <input type="email" class="form-control" placeholder="Email" formControlName="email">
-      <div class="input-group-append">
         <div class="input-group-text">
           <span class="fas fa-envelope"></span>
         </div>
-      </div>
     </div>
     <div class="small text-danger" *ngIf="email.invalid && (email.touched) && email.errors.required">
       Toto pole je povinné
     </div>
   </div>
   <div class="form-group">
-    <div class="input-group">
+    <div class="input-group mb-3">
       <input type="password" class="form-control" placeholder="Heslo" formControlName="password">
-      <div class="input-group-append">
         <div class="input-group-text">
           <span class="fas fa-lock"></span>
         </div>
-      </div>
     </div>
     <div class="small text-danger" *ngIf="password.invalid && (password.touched) && password.errors.required">
       Toto pole je povinné
     </div>
   </div>
-  <div class="row">
+  <div class="form-group">
     <!-- /.col -->
-    <div class="col-4 offset-md-8">
+    <div class="d-flex flex-row-reverse">
       <button type="submit" class="btn btn-primary btn-block">Přihlásit</button>
     </div>
     <!-- /.col -->
