--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -2,9 +2,9 @@
   <div class="col-md-12 text-end">
     <button class="preview-builder" (click)="preview()" mat-raised-button color="primary"><i class="material-icons">preview</i>Náhled
     </button>
-    <button class="save-builder ml-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
+    <button class="save-builder ms-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
     </button>
-    <button class="public-builder ml-1" (click)="save(true)" mat-raised-button color="primary"><i class="material-icons">public</i>Publikovat
+    <button class="public-builder ms-1" (click)="save(true)" mat-raised-button color="primary"><i class="material-icons">public</i>Publikovat
     </button>
   </div>
 </div>
