--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="hold-transition sidebar-mini layout-fixed">
+<div class="sidebar-mini">
 <div class="wrapper">
 
   <!-- Navbar -->
@@ -141,10 +141,10 @@
           </li>
           <!-- Menu Footer-->
           <li class="user-footer">
-            <div class="float-left">
+            <div class="float-start">
               <a href="#" class="btn btn-default btn-flat">Profile</a>
             </div>
-            <div class="float-right">
+            <div class="float-end">
               <button (click)="logout()"  class="btn btn-default btn-flat">Sign out</button>
             </div>
           </li>
