--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
@@ -2,7 +2,7 @@
   <app-animation-hider [show] = "showMoveIcon">
     <i class="material-icons icon-move">open_with</i>
   </app-animation-hider>
-  <div #gridContent>
+  <div #gridContent class="inset-0">
     <ng-container #itemTemplate></ng-container>
   </div>
 </div>
