--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -47,3 +47,16 @@ a:not([href]){
 body {
   font-family: 'Source Sans Pro';
 }
+
+.inset-0 {
+  inset: 0;
+  position: absolute;
+}
+
+.m-h-100 {
+  min-height: 100%;
+}
+
+.h-100 {
+  height: 100%;
+}
