--- a/frontend/src/app/core/components/move-able-settings/move-able-settings.component.html
+++ b/frontend/src/app/core/components/move-able-settings/move-able-settings.component.html
@@ -3,22 +3,22 @@
     <h1 cdkDragHandle><span class="logo">Project Name</span></h1>
     <ul class="list-unstyled components mb-5">
       <li class="active">
-        <a href="#"><span class="fa fa-home mr-3"></span> Homepage</a>
+        <a href="#"><span class="fa fa-home me-3"></span> Homepage</a>
       </li>
       <li>
-        <a href="#"><span class="fa fa-user mr-3"></span> Dashboard</a>
+        <a href="#"><span class="fa fa-user me-3"></span> Dashboard</a>
       </li>
       <li>
-        <a href="#"><span class="fa fa-sticky-note mr-3"></span> Friends</a>
+        <a href="#"><span class="fa fa-sticky-note me-3"></span> Friends</a>
       </li>
       <li>
-        <a href="#"><span class="fa fa-sticky-note mr-3"></span> Subcription</a>
+        <a href="#"><span class="fa fa-sticky-note me-3"></span> Subcription</a>
       </li>
       <li>
-        <a href="#"><span class="fa fa-paper-plane mr-3"></span> Settings</a>
+        <a href="#"><span class="fa fa-paper-plane me-3"></span> Settings</a>
       </li>
       <li>
-        <a href="#"><span class="fa fa-paper-plane mr-3"></span> Information</a>
+        <a href="#"><span class="fa fa-paper-plane me-3"></span> Information</a>
       </li>
     </ul>
   </nav>
