--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -39,7 +39,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../../../assets/admin_lte/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="../../../../assets/admin_lte/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 me-3 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
@@ -55,7 +55,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../../../assets/admin_lte/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../../../assets/admin_lte/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle me-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
@@ -71,7 +71,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../../../assets/admin_lte/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../../../assets/admin_lte/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle me-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
