--- a/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-effect-admin/carousel-v1-effect-admin.component.html
+++ b/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-effect-admin/carousel-v1-effect-admin.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="adminForm">
   <div class="d-flex flex-md-row flex-wrap align-items-center">
-    <div class="form-group input-group-sm mr-3">
+    <div class="form-group input-group-sm me-3">
       <label for="interval">Interval (ms)</label>
       <input id="interval" formControlName="intervalRotate" type="text" maxlength="5" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="3000">
     </div>
