--- a/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
+++ b/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
@@ -1,18 +1,78 @@
-<div id="imagesContainer">
-    <div class="row" cdkDropListGroup mixedCdkDragDrop [orientation]="'horizontal'" [itemList]="settings.images">
-      <div class="imageContainer col-md-2" *ngFor="let image of settings.images; index as i" cdkDropList mixedCdkDropList>
-        <div (mouseover)="showIconIndex=i" (mouseleave)="showIconIndex=-1"  cdkDrag mixedCdkDragSizeHelper>
-          <img class="image-item" [src]="image.path">
-          <input class="image-h1" type="text" [(ngModel)]="image.h1">
-          <input class="image-h2" type="text" [(ngModel)]="image.h2">
-          <app-animation-hider [show] = "showIconIndex==i">
-            <i class="material-icons icon-remove" (click)="onClickRemoveImageButton(i)">close</i>
-          </app-animation-hider>
+<!--<div class="mixed-example-list"-->
+<!--[itemList]="settings.images"-->
+<!--[style.flexDirection]="'row'"-->
+<!--[style.height]="''"-->
+<!--cdkDropListGroup mixedCdkDragDrop-->
+<!--[containerSelector]="''"-->
+<!--[orientation]="'horizontal'"-->
+<!--&gt;-->
+<!--  <div *ngFor="let image of settings.images; index as i" cdkDropList mixedCdkDropList class="imageContainer me-1">-->
+<!--    <div (mouseover)="showIconIndex=i" (mouseleave)="showIconIndex=-1"  cdkDrag mixedCdkDragSizeHelper>-->
+<!--      <img class="image-item" [src]="image.path">-->
+<!--      <input class="image-h1" type="text" [(ngModel)]="image.h1">-->
+<!--      <input class="image-h2" type="text" [(ngModel)]="image.h2">-->
+<!--      <app-animation-hider [show] = "showIconIndex==i">-->
+<!--        <i class="material-icons icon-remove" (click)="onClickRemoveImageButton(i)">close</i>-->
+<!--      </app-animation-hider>-->
+<!--    </div>-->
+<!--    <br>-->
+<!--  </div>-->
+
+
+<!--</div>-->
+
+
+<div class="mixed-example-list"
+     style.flexDirection='horizontal'
+     style.height=''
+     cdkDropListGroup mixedCdkDragDrop
+     [containerSelector]="''"
+     [orientation]="orientation"
+     (dropped)="dropped($event)">
+        <span *ngFor="let image of settings.images; index as i" cdkDropList mixedCdkDropList>
+          <div class="mixed-box"
+               (mouseover)="showIconIndex=i"
+               (mouseleave)="showIconIndex=-1"
+               [style.cursor]="handler ? '' : 'move'"
+               cdkDrag mixedCdkDragSizeHelper
+               (contentBoxSize)="onSizeChange($event)">
+                <img class="image-item" [src]="image.path">
+                  <input class="image-h1" type="text" [(ngModel)]="image.h1">
+                  <input class="image-h2" type="text" [(ngModel)]="image.h2">
+                  <app-animation-hider [show] = "showIconIndex==i">
+                    <i class="material-icons icon-remove" (click)="onClickRemoveImageButton(i)">close</i>
+                  </app-animation-hider>
         </div>
-      </div>
-    </div>
+        </span>
 </div>
+
 <div class="text-end">
   <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2"><i class="material-icons">photo</i>Přidat obrázek
   </button>
 </div>
+
+
+
+
+
+
+
+<!--<div id="imagesContainer">-->
+<!--    <div class="d-flex" cdkDropListGroup mixedCdkDragDrop [orientation]="'horizontal'" [itemList]="settings.images">-->
+<!--      <div *ngFor="let image of settings.images; index as i" cdkDropList mixedCdkDropList class="imageContainer me-1">-->
+<!--          <div (mouseover)="showIconIndex=i" (mouseleave)="showIconIndex=-1"  cdkDrag mixedCdkDragSizeHelper>-->
+<!--            <img class="image-item" [src]="image.path">-->
+<!--            <input class="image-h1" type="text" [(ngModel)]="image.h1">-->
+<!--            <input class="image-h2" type="text" [(ngModel)]="image.h2">-->
+<!--            <app-animation-hider [show] = "showIconIndex==i">-->
+<!--              <i class="material-icons icon-remove" (click)="onClickRemoveImageButton(i)">close</i>-->
+<!--            </app-animation-hider>-->
+<!--          </div>-->
+<!--        <br>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="text-end">-->
+<!--  <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2"><i class="material-icons">photo</i>Přidat obrázek-->
+<!--  </button>-->
+<!--</div>-->
