--- a/frontend/src/app/plugins/modules/menu/menu-v1/pages/menu-v1-admin/menu-v1-admin.component.html
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/pages/menu-v1-admin/menu-v1-admin.component.html
@@ -1,4 +1,6 @@
-<app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
+<div class="plugin-form-border">
+  <app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
+</div>
 <div class="text-end">
   <button (click)="addMenuItem()" mat-raised-button color="primary" class="my-2"><i class="material-icons">add</i>Přidat položku menu
   </button>
