--- a/frontend/src/app/core/modules/file-manager/components/file-manager-dialog/file-manager-dialog.component.html
+++ b/frontend/src/app/core/modules/file-manager/components/file-manager-dialog/file-manager-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Souborový manager <i class="material-icons float-right" mat-dialog-close>close</i></h2>
+<h2 mat-dialog-title>Souborový manager <i class="material-icons float-end" mat-dialog-close>close</i></h2>
 <div class="row">
   <div class="col-md-12"><app-file-manager></app-file-manager></div>
   <div class="col-md-12 text-end">
