--- a/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-admin-item/menu-v1-admin-item.component.html
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-admin-item/menu-v1-admin-item.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let item of items; let i = index">
   <div class="menu-item level-{{item.level}}">
     <div class="item-line d-flex align-items-center">
-      <span class="mr-auto">{{item.name}}</span>
+      <span class="me-auto">{{item.name}}</span>
       <i class="material-icons icon-move handle">open_with</i>
       <mat-icon role="button" (click)="remove(items, i)" class="close-icon">delete</mat-icon>
       <mat-icon role="button" (click)="settings(item)" class="">settings</mat-icon>
