--- a/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-item-settings/menu-v1-item-settings.component.html
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-item-settings/menu-v1-item-settings.component.html
@@ -1,25 +1,24 @@
 <app-dialog>
   <ng-container title>Nastavení položky menu</ng-container>
   <form content [formGroup]="settings">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="interval">Název:</label>
-        <input id="interval" formControlName="name" type="text" class="form-control">
-        <div *ngIf="settings.get('name').hasError('required')" class="invalid-feedback">
-          Toto pole je povinné
-        </div>
-      </div>
-      <div class="form-group col-md-6">
-        <label for="page">Stránka {{!settings.get('idPage').value}}</label>
-        <select class="form-control" required id="page" formControlName="idPage">
-          <option [ngValue]="null" disabled>Vyberte stránku...</option>
-          <option *ngFor="let item of pages" [ngValue]="item.id">{{item.name}}</option>
-        </select>
-        <div *ngIf="settings.get('idPage').hasError('required')" class="invalid-feedback">
-          Toto pole je povinné
-        </div>
+    <div class="mb-3">
+      <label for="interval">Název:</label>
+      <input id="interval" formControlName="name" type="text" class="form-control">
+      <div *ngIf="settings.get('name').hasError('required')" class="invalid-feedback">
+        Toto pole je povinné
       </div>
     </div>
+    <div class="">
+      <label for="page">Stránka {{!settings.get('idPage').value}}</label>
+      <select class="form-control" required id="page" formControlName="idPage">
+        <option [ngValue]="null" disabled>Vyberte stránku...</option>
+        <option *ngFor="let item of pages" [ngValue]="item.id">{{item.name}}</option>
+      </select>
+      <div *ngIf="settings.get('idPage').hasError('required')" class="invalid-feedback">
+        Toto pole je povinné
+      </div>
+    </div>
+
 
     <!--    <mat-form-field appearance="fill">-->
     <!--      <mat-label>Stránka: </mat-label>-->
