--- a/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1/menu-v1.component.html
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1/menu-v1.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark m-h-100">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/">
+      <span *ngIf="settings.logoName">{{settings.logoName}}</span>
+      <img *ngIf="settings.logoImage" height="50" src="{{settings.logoImage}}">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
