--- a/frontend/src/app/public/components/public-grid-item/public-grid-item.component.html
+++ b/frontend/src/app/public/components/public-grid-item/public-grid-item.component.html
@@ -1,5 +1,5 @@
 <div class="grid-stack-item-content">
-  <div #gridContent>
+  <div #gridContent class="inset-0">
     <ng-container #container></ng-container>
   </div>
 </div>
