--- a/frontend/src/app/core/components/mini-admin/mini-admin.component.css
+++ b/frontend/src/app/core/components/mini-admin/mini-admin.component.css
@@ -37,7 +37,7 @@
 }
 
 #content {
-  width: 100%;
+  /*width: 100%;*/
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
