--- a/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/palette-builder/page-block/page-block.component.css
@@ -43,3 +43,9 @@
   box-sizing: content-box;
   padding-bottom: 31px;
 }
+
+@media only screen and (max-width: 700px) {
+  .handle {
+    display: none;
+  }
+}
