--- a/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.html
+++ b/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.html
@@ -1,1 +1,4 @@
-<img class="video" [src]="settings.videoPath">
+<div class="video-container">
+<!--  <iframe width="560" height="315" [src]="getVideoUrl()"  allowfullscreen></iframe>-->
+</div>
+
