--- a/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.html
+++ b/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.html
@@ -1,4 +1,4 @@
 <div class="video-container">
-<!--  <iframe width="560" height="315" [src]="getVideoUrl()"  allowfullscreen></iframe>-->
+<!--<embed [src]="getVideoUrl()" width="560" height="315">-->
 </div>
 
