--- a/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.css
+++ b/frontend/src/app/plugins/modules/video/video-v1/components/video-v1/video-v1.component.css
@@ -1,12 +1,22 @@
-/*.video-container {*/
-/*  position: relative;*/
-/*  padding-bottom: 56.25%; !* 16:9 *!*/
-/*  height: 0;*/
-/*}*/
-/*.video-container iframe {*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*}*/
+.video-container {
+  width: 100%;
+  height: 100%;
+}
+
+.frame {
+  width: 100%;
+  height: 100%;
+}
+
+.video-icon {
+  vertical-align: bottom;
+  position: relative;
+  top: calc(50% - 10px);
+}
+
+.video-icon-container {
+  text-align: center;
+}
+
+
+
