--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.css
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.css
@@ -12,13 +12,42 @@
 .icon-move {
   position: absolute;
   cursor: move;
-  z-index: 9999;
-  color:red;
 }
 
 @media only screen and (max-width: 700px) {
   .icon-move {
     display: none;
   }
+}
+
+.frameCover{
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.frameCover div.btn {
+  background-color: #262b33;
+  border-radius: 0;
+  border: 1px solid #d6d6d6;
+  font-size: 12px;
+  height: 25px;
+  margin-right: 1px;
+  outline: 1px solid #000000;
+  position: relative;
+  top: 1px;
+  width: 25px;
+  padding: 0;
+}
+
+.frameCover div.btn i {
+  color: white;
+  display: block;
+  font-size: 18px;
+  position: relative !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
