--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.css
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.css
@@ -14,6 +14,10 @@
   cursor: move;
 }
 
+.icon-remove {
+  color: red !important;
+}
+
 @media only screen and (max-width: 700px) {
   .icon-move {
     display: none;
