--- a/frontend/src/app/page/pages/page-list/page-list.component.html
+++ b/frontend/src/app/page/pages/page-list/page-list.component.html
@@ -30,6 +30,9 @@
         </button>
       </div>
     </div>
+
+    <app-form-builder></app-form-builder>
+
   </div><!-- /.card-body -->
 </div>
 
