--- a/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
@@ -1,7 +1,14 @@
-<div [ngSwitch]="formData.constructor.name">
+<div class="input-container" [ngSwitch]="formData.constructor.name" (mouseenter)="showPanel=true" (mouseleave)="showPanel=false">
   <div *ngSwitchCase="'TextInput'">
     <label for="{{uniqueId}}" class="form-label">{{formData.label}}</label>
     <input type="text" class="form-control" id="{{uniqueId}}" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">{{formData.helpText}}</div>
+    <app-animation-hider [show]="showPanel">
+    <div>
+      <div class="input-panel input-panel-top">top</div>
+      <div class="input-panel input-panel-left">aaa</div>
+      <div class="input-panel input-panel-right">bbb</div>
+    </div>
+    </app-animation-hider>
   </div>
 </div>
