--- a/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.css
+++ b/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.css
@@ -1,19 +1,21 @@
 .input-panel-left{
   position: absolute;
-  top: 50%;
-  left: -4%;
+  top: 29%;
+  left: -5%;
+  color: #00a87d;
 }
 
 .input-panel-right{
   position: absolute;
-  top: 50%;
-  right: -4%;
+  top: 29%;
+  right: -5%;
+  color: #00a87d;
 }
 
 .input-panel-top{
   position: absolute;
-  top: -4%;
-  right: 50%;
+  top: -20%;
+  right: 47%;
 }
 
 .input-container {
