--- a/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
@@ -5,10 +5,30 @@
     <div id="emailHelp" class="form-text">{{formData.helpText}}</div>
     <app-animation-hider [show]="showPanel">
     <div>
-      <div class="input-panel input-panel-top">top</div>
-      <div class="input-panel input-panel-left">aaa</div>
-      <div class="input-panel input-panel-right">bbb</div>
+      <div class="input-panel input-panel-top">
+        <button mat-icon-button>
+          <mat-icon>settings</mat-icon>
+        </button>
+      </div>
+      <div class="input-panel input-panel-left">
+        <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{position: 'left'}">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+      <div class="input-panel input-panel-right">
+        <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{position: 'right'}">
+          <mat-icon>add</mat-icon>
+        </button>
+
+      </div>
     </div>
     </app-animation-hider>
   </div>
 </div>
+
+<mat-menu #appMenu="matMenu">
+  <ng-template matMenuContent let-position="position">
+    <button mat-menu-item>Settings</button>
+    <button mat-menu-item>Log off {{position}}</button>
+  </ng-template>
+</mat-menu>
