--- a/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.css
+++ b/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.css
@@ -1,14 +1,14 @@
 .input-panel-left{
   position: absolute;
   top: 29%;
-  left: -5%;
+  left: -30px;
   color: #00a87d;
 }
 
 .input-panel-right{
   position: absolute;
   top: 29%;
-  right: -5%;
+  right: -30px;
   color: #00a87d;
 }
 
