--- a/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-input/form-input.component.html
@@ -27,7 +27,7 @@
     </select>
     <div class="form-text">{{formData.helpText}}</div>
   </div>
-  <app-animation-hider [show]="showPanel">
+  <app-animation-hider *ngIf="isAdmin" [show]="showPanel">
     <div>
       <div class="input-panel input-panel-top">
         <button mat-icon-button>
