--- a/frontend/src/app/core/modules/form-builder/components/admin-input/selectbox-admin/selectbox-admin.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/admin-input/selectbox-admin/selectbox-admin.component.html
@@ -1,5 +1,13 @@
-<app-dialog>
-  <ng-container title>Smazání položky menu</ng-container>
-  <ng-container content>Opravdu si přejete smazat položku menu?</ng-container>
-  <ng-container save-button>Odstranit</ng-container>
+<app-dialog [saveButtonShow]="false">
+  <ng-container title>Selectbox - nastavení</ng-container>
+  <ng-container content>
+    <form [formGroup]="form">
+      <label class="form-label" for="label">Popisek: </label>
+      <input class="form-control" id="label" type="text" formControlName="label">
+
+      <label class="form-label" for="help-text">Miniaturní nápověda: </label>
+      <input class="form-control" id="help-text" type="text" formControlName="helpText">
+
+    </form>
+  </ng-container>
 </app-dialog>
