--- a/frontend/src/app/core/modules/form-builder/components/admin-input/selectbox-admin/selectbox-admin.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/admin-input/selectbox-admin/selectbox-admin.component.html
@@ -1,7 +1,15 @@
-<app-dialog>
+<app-dialog [saveButtonShow]="false">
   <ng-container title>Selectbox - nastavení</ng-container>
   <ng-container content>
     <form [formGroup]="form" >
+      <label class="form-label" for="name">Název: </label>
+      <input class="form-control" id="name" type="text" formControlName="name">
+      <div *ngIf="form.get('name').hasError('required')" class="invalid-feedback">
+        Toto pole je povinné
+      </div>
+
+      <div class="form-text mb-3">Slouží pro odeslaná data</div>
+
       <label class="form-label" for="label">Popisek: </label>
       <input class="form-control mb-3" id="label" type="text" formControlName="label">
 
@@ -26,7 +34,7 @@
       </button>
     </form>
   </ng-container>
-  <ng-container save-button>
-    <button class="btn btn-primary" (click)="onSubmit()">Uložit</button>
+  <ng-container custom-button>
+    <button [mat-dialog-close] = "form.valid" [disabled]="!form.valid" (click)="onSubmit()" class="btn btn-primary">Uložit</button>
   </ng-container>
 </app-dialog>
