--- a/frontend/src/app/core/modules/form-builder/components/form-admin/form-builder/form-builder.component.html
+++ b/frontend/src/app/core/modules/form-builder/components/form-admin/form-builder/form-builder.component.html
@@ -1,11 +1,10 @@
 <div class="container">
   <div class="form-row row" *ngFor="let rowData of formData;index as x">
-    <div class="col" *ngFor="let columnData of rowData;index as y">
-      <app-form-input *ngIf="isAdmin" [isAdmin]="true" [formData]="columnData" (newInput)="addInput($event, x, y)" (removeInput)="deleteInput(x, y)"></app-form-input>
-      <app-form-input *ngIf="!isAdmin" [isAdmin]="false" [formData]="columnData"></app-form-input>
+    <div class="col input-container-col" *ngFor="let columnData of rowData;index as y">
+      <app-form-input [formData]="columnData" (newInput)="addInput($event, x, y)" (removeInput)="deleteInput(x, y)"></app-form-input>
     </div>
   </div>
-  <div *ngIf="isAdmin" class="form-row row">
+  <div class="form-row row">
     <app-form-input [isNewRowInput]="true" (newInput)="addInput($event, -1, -1)"></app-form-input>
   </div>
 </div>
